--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -274,9 +274,7 @@
     <footer class="foot">Admin Dashboard &copy; Kitchen Coders</footer>
 
     <script>
-
-      
-      const socket = io.connect("https://drug-detection.onrender.com/admin");
+      const socket = io.connect("https://drug-detection.onrender.com/");
 
       // Start analysis on button click
       document.getElementById("start-analysis").onclick = () => {
